# ia-usage

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  hacs.json  pyproject.toml  sonar-project.properties
.dev/: call-codex.sh  call-error.sh  call-ollama.sh  copy-to-core.sh
.github/workflows/: create-pr.yml  create-release.yml  hassfest.yaml  release-develop.yml  sonarqube.yml  tests.yml  validate.yml
custom_components/ai_usage/: __init__.py  binary_sensor.py  config_flow.py  const.py  identity.py  images.py  ingestion.py  manifest.json  models.py  runtime.py  sensor.py  storage.py  strings.json  validation.py
custom_components/ai_usage/providers/: __init__.py  base.py  codex.py  ollama_cloud.py
custom_components/ia_usage/: const.py  manifest.json
docs/: TODO.md  compatibility.md  device-and-sensor-contract.md  generic-provider-contract.md  implementation-spec.md  payload-contract.md
tests/: conftest.py  test_identity.py  test_ingestion.py  test_validation.py
